# civ_sim

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
src/civ_sim/: __init__.py  __main__.py  analysis.py  cli.py  config.py  constants.py  controller.py  io.py  models.py  noise.py  render.py  sim.py  world.py  worldgen.py
tests/: test_smoke.py
